# hexagonal-rs

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: bootstrap.rs  lib.rs  main.rs
src/api/: mod.rs
src/application/: mod.rs
src/domain/: errors.rs  mod.rs  model.rs  ports.rs
src/infrastructure/: in_memory_repo.rs  mod.rs
