[package]
name = "hexagonal-rs"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["tokio", "http1"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
